crates/bc-cli/tests/cli/snapshots/cli__budget__update_budget_clear_name.snap
---
source: crates/bc-cli/tests/cli/budget.rs
expression: output
---
success: true
exit_code: 0
----- stdout -----
Updated budget [BUDGET_ID]
  target:  500 AUD
  rollover: reset-to-zero
----- stderr -----
