crates/bc-cli/tests/cli/snapshots/cli__budget__update_budget_rollover_and_target.snap
---
source: crates/bc-cli/tests/cli/budget.rs
expression: output
---
success: true
exit_code: 0
----- stdout -----
Updated budget [BUDGET_ID]
  name:    Groceries Budget
  target:  200 AUD
  rollover: carry-forward
----- stderr -----
